# NyxTracer

./: .gitignore  CMakeLists.txt  NyxTracer.cpp  NyxTracer.h  README.md  cpp.hint  rebuild.sh
src/: Playground.cpp  bitmap.hpp  camera.cpp  camera.hpp  canvas.hpp  checker3D_pattern.hpp  color.hpp  config.hpp  constant_pattern.hpp  gradient_pattern.hpp  hit.cpp  hit.hpp  intersection.cpp  intersection.hpp  main.cpp  material.hpp  matrix.hpp  object.hpp  pattern.hpp  plane.hpp  point_light.hpp  radial_gradient_pattern.hpp  ray.hpp  ring_pattern.hpp  sphere.hpp  stripe_pattern.hpp  transformation.hpp  tuple.hpp  uid.cpp  uid.hpp  world.cpp  world.hpp
src/common/: UUID.cpp  UUID.hpp
src/graphics/: Canvas.hpp  Color.hpp  Constants.hpp  Intersections.hpp  Light.hpp  Material.hpp  Matrix.cpp  Matrix.hpp  Point.hpp  Ray.hpp  Sphere.hpp  Transformation.hpp  Tuple.hpp  Vector.cpp  Vector.hpp
src/math/: Point.hpp  Vector.hpp
tests/: test_camera.cpp  test_canvas.cpp  test_checker3D_pattern.cpp  test_color.cpp  test_gradient_pattern.cpp  test_intersection.cpp  test_material.cpp  test_matrix.cpp  test_object.cpp  test_pattern.cpp  test_plane.cpp  test_point.cpp  test_point_light.cpp  test_ray.cpp  test_ring_pattern.cpp  test_sphere.cpp  test_stripe_pattern.cpp  test_transformation.cpp  test_uid.cpp  test_vector.cpp  test_world.cpp
tests/graphics/: test_Canvas.cpp  test_Color.cpp  test_Intersections.cpp  test_Light.cpp  test_Material.cpp  test_Matrix.cpp  test_Point.cpp  test_Ray.cpp  test_Sphere.cpp  test_Transformation.cpp  test_Vector.cpp
tests/math/: test_Point.cpp  test_Vector.cpp
tests/utils/: Util.cpp  Util.hpp
